--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A boilerplate for react based project",
   "main": "index.js",
   "scripts": {
+    "start": "webpack && webpack-dev-server --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,23 @@
   "bugs": {
     "url": "https://github.com/shinyouwith/react-project-boilerplate/issues"
   },
-  "homepage": "https://github.com/shinyouwith/react-project-boilerplate#readme"
+  "homepage": "https://github.com/shinyouwith/react-project-boilerplate#readme",
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
+  },
+  "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
+  }
 }
